--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -101,7 +101,7 @@ html, body {
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
   max-width: 1000px;
-  width: 60%;
+  width: 80%;
   max-height: 80vh;
   background-color: #fff;
   border-radius: .5em;
@@ -219,10 +219,26 @@ html, body {
   padding: 1em 0;
 }
 
+.choice-template-area .template-slider {
+  display: flex;
+}
+
 .choice-template-area .template-slider .temp-slide {
   padding: 2em;
   box-sizing: border-box;
-  background-color: #eee;
+  background-color: #f5f5f5;
+}
+
+.choice-template-area .template-slider .temp-slide.is-choice {
+  background-color: #d1f4ff;
+}
+
+.choice-template-area .template-slider .slick-list {
+  width: 80%;
+}
+
+.choice-template-area .template-slider .slick-arrow {
+  width: 10%;
 }
 
 /**
