--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -1,10 +1,12 @@
+$main-color: #0558a5;
+
+
 html,body{
     min-height:100vh;
 }
 .wrapper{
     min-height:100vh;
 }
-
 
 /**
  * main css
@@ -98,7 +100,7 @@ html,body{
     left:50%;
     transform:translateX(-50%) translateY(-50%);
     max-width:1000px;
-    width:60%;
+    width:80%;
     max-height:80vh;
     background-color:#fff;
     border-radius:.5em;
@@ -108,7 +110,7 @@ html,body{
         text-align:center;
         font-size:2rem;
         padding:2em 0;
-        color:#0558a5;
+        color:$main-color;
     }
     .popup-content{
         //padding-top:2em;
@@ -197,7 +199,7 @@ html,body{
                 background-color:#d1f4ff;
                
                 .choice-box .fas{
-                    color:#0558a5;
+                    color:$main-color;
                 }
             }
         }   
@@ -211,11 +213,26 @@ html,body{
     padding:1em 0;
    
     .template-slider{
-
+        display:flex;
         .temp-slide{
             padding:2em;
             box-sizing:border-box;
-            background-color:#eee;
+            background-color:#f5f5f5;
+            &.is-choice{
+                background-color:#d1f4ff;    
+            }
+        }
+        .slick-list{
+            width:80%;
+        }
+        .slick-arrow{
+            width:10%;
+            &.slick-next{
+                
+            }
+            &.slick-prev{
+
+            }
         }
     }
 } 
@@ -229,7 +246,7 @@ html,body{
     transition:all .2s ease-in-out;
     display:inline-block;
     padding:1em 2em;
-    background-color:#0558a5;
+    background-color:$main-color;
     color:#fff;
     border:0;
     border-radius:.3em;
