--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -52,7 +52,7 @@ html, body {
   border-radius: 1em;
   transform: translateX(-50%) translateY(-50%);
   overflow: hidden;
-  box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.2);
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
 }
 
 .main-section .intro-card h2 {
@@ -239,6 +239,51 @@ html, body {
 
 .choice-template-area .template-slider .slick-arrow {
   width: 10%;
+}
+
+#template--create-card-board .header {
+  z-index: 100;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #f5f5f5;
+  border-bottom: 1px solid #ddd;
+}
+
+#template--create-card-board .header .btn-new-card {
+  transition: all .3s ease-in-out;
+  width: 300px;
+  height: 50px;
+  background-color: #0558a5;
+  color: #fff;
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+#template--create-card-board .header .btn-new-card:hover, #template--create-card-board .header .btn-new-card:focus, #template--create-card-board .header .btn-new-card:active {
+  background-color: #04396b;
+}
+
+#template--create-card-board .container {
+  width: 100%;
+  height: 100vh;
+  padding-top: 50px;
+  padding-left: 300px;
+  box-sizing: border-box;
+}
+
+#template--create-card-board .container .left-menu {
+  z-index: 50;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 300px;
+  height: 100vh;
+  padding-top: 50px;
+  box-sizing: border-box;
+  background-color: #ddd;
 }
 
 /**
