--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -52,7 +52,7 @@ html,body{
         border-radius:1em;
         transform:translateX(-50%) translateY(-50%);
         overflow:hidden;
-        box-shadow: 10px 10px 30px rgba(0,0,0,.2);
+        box-shadow: 5px 5px 30px rgba(0,0,0,.2);
     
         h2{
             padding-top:1.4em;
@@ -235,8 +235,52 @@ html,body{
             }
         }
     }
-} 
+}
 
+
+#template--create-card-board {
+    .header{
+        z-index:100;
+        position:absolute;
+        top:0;
+        left:0;
+        width:100%;
+        background-color:#f5f5f5;
+        border-bottom:1px solid #ddd;
+        .btn-new-card{
+            transition:all .3s ease-in-out;
+            width:300px;
+            height:50px;
+            background-color:$main-color;
+            color:#fff;
+            text-align:center;
+            font-size:1.2rem;
+            font-weight:bold;
+            &:hover,&:focus,&:active{
+                background-color:#04396b;
+            }
+        }
+    }
+
+    .container{
+        width:100%;
+        height:100vh;
+        padding-top:50px;
+        padding-left:300px;
+        box-sizing:border-box;
+        .left-menu{
+            z-index:50;
+            position:absolute; 
+            top:0; 
+            left:0;
+            width:300px;
+            height:100vh;
+            padding-top:50px;
+            box-sizing:border-box;
+            background-color:#ddd;
+        }
+    }
+}
 
 
 /**
