--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -241,6 +241,43 @@ html, body {
   width: 10%;
 }
 
+.alert-box {
+  display: none;
+  z-index: 9999;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  padding: 3em 6em;
+  border: 1px solid #ddd;
+  border-radius: .2em;
+  background-color: #fff;
+}
+
+.alert-box .text-box {
+  display: block;
+  width: 100%;
+  padding: 1em 1em 3em 1em;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: bold;
+  color: #333;
+}
+
+.alert-box .btn-area {
+  width: 100%;
+  text-align: center;
+}
+
+.alert-box .btn-area button {
+  display: inline-block;
+  padding: 1em 4em;
+  font-size: 1rem;
+  border: 1px solid #ddd;
+  border-radius: .2em;
+  text-align: center;
+}
+
 #template--create-card-board .header {
   z-index: 100;
   position: absolute;
@@ -267,6 +304,7 @@ html, body {
 }
 
 #template--create-card-board .container {
+  position: relative;
   width: 100%;
   height: 100vh;
   padding-top: 50px;
@@ -283,7 +321,47 @@ html, body {
   height: 100vh;
   padding-top: 50px;
   box-sizing: border-box;
-  background-color: #ddd;
+  border-right: 1px solid #ddd;
+}
+
+#template--create-card-board .container .left-menu .menu-item-list .menu-item {
+  display: block;
+  width: 100%;
+  padding: 1em 0;
+  background-color: #f3f3f3;
+  color: #0558a5;
+  font-size: 1.1rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+#template--create-card-board .container .left-menu .menu-item-list .depth li {
+  display: flex;
+  padding: 1em .4em;
+  border-bottom: 1px solid #ddd;
+  box-sizing: border-box;
+}
+
+#template--create-card-board .container .left-menu .menu-item-list .depth li input {
+  display: block;
+  width: 220px;
+  padding: 1em .2em;
+  box-sizing: border-box;
+  border: 1px dotted #ddd;
+}
+
+#template--create-card-board .container .left-menu .menu-item-list .depth li button {
+  display: block;
+  width: 40px;
+  box-sizing: border-box;
+}
+
+#template--create-card-board .container .left-menu .menu-item-list .depth li button.btn-modify {
+  color: #51abff;
+}
+
+#template--create-card-board .container .left-menu .menu-item-list .depth li button.btn-delete {
+  color: #ff7171;
 }
 
 /**
@@ -314,5 +392,11 @@ html, body {
 
 .btn.btn-lg {
   padding: 1.2em 4em;
+}
+
+#card-front,
+#card-back {
+  border: 1px solid #ddd;
+  margin: 2em;
 }
 /*# sourceMappingURL=style.css.map */
