--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -236,9 +236,45 @@ html,body{
         }
     }
 }
+.alert-box{
+    display:none;
+    z-index:9999;
+    position:fixed;
+    top:50%;
+    left:50%;
+    transform:translateX(-50%) translateY(-50%);
+    padding: 3em 6em;
+    border:1px solid #ddd;
+    border-radius:.2em;
+    background-color:#fff;
+    .text-box{
+        display:block;
+        width:100%;
+        padding:1em 1em 3em 1em;
 
+        text-align:center;
+        font-size:1rem;
+        font-weight:bold;
+        color:#333;
+    }
+    .btn-area{
+        width:100%;
+         text-align:center;
+         button{
+             display:inline-block;
+             padding:1em 4em;
+             font-size:1rem;
+             border:1px solid #ddd;
+             border-radius:.2em;
+             text-align:center;
+         }
+    }
+
+    
+}
 
 #template--create-card-board {
+
     .header{
         z-index:100;
         position:absolute;
@@ -263,6 +299,7 @@ html,body{
     }
 
     .container{
+        position:relative;
         width:100%;
         height:100vh;
         padding-top:50px;
@@ -277,7 +314,47 @@ html,body{
             height:100vh;
             padding-top:50px;
             box-sizing:border-box;
-            background-color:#ddd;
+            border-right:1px solid #ddd;
+
+            .menu-item-list{
+                .menu-item{
+                    display:block;
+                    width:100%;
+                    padding:1em 0;
+                    background-color:#f3f3f3;
+                    color:$main-color;
+                    font-size:1.1rem;
+                    font-weight:bold;
+                    text-align:center;
+                }
+                .depth{
+                    li{
+
+                        display:flex;   
+                        padding:1em .4em;
+                        border-bottom:1px solid #ddd;
+                        box-sizing:border-box;
+                        input{
+                            display:block;
+                            width:220px;
+                            padding:1em .2em;
+                            box-sizing:border-box;
+                            border:1px dotted #ddd;
+                        }
+                        button{
+                            display:block;
+                            width:40px;
+                            box-sizing:border-box;
+                            &.btn-modify{
+                                color:#51abff;
+                            }
+                            &.btn-delete{
+                                color:#ff7171;
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
 }
@@ -309,4 +386,12 @@ html,body{
         padding:1.2em 4em;
     }
 
+}
+
+
+#card-front,
+#card-back{
+    //position:absolute;
+    border:1px solid #ddd;
+    margin:2em;
 }
