--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -88,7 +88,7 @@ html, body {
   position: fixed;
   top: 0;
   left: 0;
-  display: block;
+  display: none;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.8);
@@ -252,6 +252,7 @@ html, body {
   border: 1px solid #ddd;
   border-radius: .2em;
   background-color: #fff;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
 
 .alert-box .text-box {
@@ -259,7 +260,7 @@ html, body {
   width: 100%;
   padding: 1em 1em 3em 1em;
   text-align: center;
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: bold;
   color: #333;
 }
@@ -276,6 +277,16 @@ html, body {
   border: 1px solid #ddd;
   border-radius: .2em;
   text-align: center;
+}
+
+.alert-box .btn-area button.btn-agree {
+  background-color: #0558a5;
+  color: #fff;
+  font-weight: bold;
+}
+
+.alert-box .btn-area button.btn-cencel {
+  background-color: #dfdfdf;
 }
 
 #template--create-card-board .header {
@@ -329,6 +340,7 @@ html, body {
   width: 100%;
   padding: 1em 0;
   background-color: #f3f3f3;
+  border-bottom: 1px solid #ddd;
   color: #0558a5;
   font-size: 1.1rem;
   font-weight: bold;
@@ -338,26 +350,29 @@ html, body {
 #template--create-card-board .container .left-menu .menu-item-list .depth li {
   display: flex;
   padding: 1em .4em;
+  border: 1px solid #fff;
   border-bottom: 1px solid #ddd;
   box-sizing: border-box;
 }
 
+#template--create-card-board .container .left-menu .menu-item-list .depth li:hover, #template--create-card-board .container .left-menu .menu-item-list .depth li:focus, #template--create-card-board .container .left-menu .menu-item-list .depth liactive {
+  border: 1px solid #ff7171;
+  background-color: #fff6f6;
+}
+
 #template--create-card-board .container .left-menu .menu-item-list .depth li input {
   display: block;
-  width: 220px;
+  width: 260px;
   padding: 1em .2em;
   box-sizing: border-box;
   border: 1px dotted #ddd;
+  background-color: #fff;
 }
 
 #template--create-card-board .container .left-menu .menu-item-list .depth li button {
   display: block;
   width: 40px;
   box-sizing: border-box;
-}
-
-#template--create-card-board .container .left-menu .menu-item-list .depth li button.btn-modify {
-  color: #51abff;
 }
 
 #template--create-card-board .container .left-menu .menu-item-list .depth li button.btn-delete {
