--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -87,7 +87,7 @@ html,body{
     position:fixed;
     top:0;
     left:0;
-    display:block;
+    display:none;
     width:100%;
     height:100%;
     background:rgba(0,0,0,.8);
@@ -227,12 +227,12 @@ html,body{
         }
         .slick-arrow{
             width:10%;
-            &.slick-next{
+            // &.slick-next{
                 
-            }
-            &.slick-prev{
+            // }
+            // &.slick-prev{
 
-            }
+            // }
         }
     }
 }
@@ -247,13 +247,13 @@ html,body{
     border:1px solid #ddd;
     border-radius:.2em;
     background-color:#fff;
+    box-shadow: 0 0 20px rgba(0,0,0,.3);
     .text-box{
         display:block;
         width:100%;
         padding:1em 1em 3em 1em;
-
         text-align:center;
-        font-size:1rem;
+        font-size:1.2rem;
         font-weight:bold;
         color:#333;
     }
@@ -267,6 +267,15 @@ html,body{
              border:1px solid #ddd;
              border-radius:.2em;
              text-align:center;
+
+             &.btn-agree{
+                background-color:$main-color;
+                color:#fff;
+                font-weight:bold;
+             }
+             &.btn-cencel{
+                 background-color:#dfdfdf;
+             }
          }
     }
 
@@ -322,6 +331,7 @@ html,body{
                     width:100%;
                     padding:1em 0;
                     background-color:#f3f3f3;
+                    border-bottom:1px solid #ddd;
                     color:$main-color;
                     font-size:1.1rem;
                     font-weight:bold;
@@ -329,25 +339,29 @@ html,body{
                 }
                 .depth{
                     li{
-
                         display:flex;   
                         padding:1em .4em;
+                        border:1px solid #fff;
                         border-bottom:1px solid #ddd;
                         box-sizing:border-box;
+                        &:hover,
+                        &:focus,
+                        &active{
+                            border:1px solid #ff7171;
+                            background-color:#fff6f6;
+                        }
                         input{
                             display:block;
-                            width:220px;
+                            width:260px;
                             padding:1em .2em;
                             box-sizing:border-box;
                             border:1px dotted #ddd;
+                            background-color:#fff;
                         }
                         button{
                             display:block;
                             width:40px;
                             box-sizing:border-box;
-                            &.btn-modify{
-                                color:#51abff;
-                            }
                             &.btn-delete{
                                 color:#ff7171;
                             }
